# jane

./: .gitignore  README.md  baseline.ipynb  demo.ipynb  preview_data.ipynb  pyproject.toml
models/: baseline.json  score_baseline.json
src/jane/: __init__.py  train.py
src/jane/kaggle_evaluation/: __init__.py  jane_street_gateway.py  jane_street_inference_server.py
src/jane/kaggle_evaluation/core/: __init__.py  base_gateway.py  relay.py  templates.py
src/jane/model/: baseline.py  model.py
