[project]
name = "jane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.7",
    "grpcio>=1.66.2",
    "lightgbm>=4.5.0",
    "polars-ds>=0.6.0",
    "polars>=1.9.0",
    "protobuf>=5.28.2",
    "pyarrow>=17.0.0",
    "xgboost>=2.1.1",
]

[project.scripts]
hello = "jane:hello"
train = "jane.train:train_baseline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
